--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
     <header>
         <div class="navbar">
             <div class="navbaritems" id="logo">
-                <div class="logo"></div>
+                <div class="logo"><a href="https://www.myntra.com/"><img src="logo.png"></a></div>
             </div>
             <div class="navbaritems" id="men">
-                <div class="men"><a>MEN</a></div>
+                <div class="men"><a href="">MEN</a></div>
             </div>
             <div class="navbaritems" id="women">
-                <div class="women"><a>WOMEN</a></div>
+                <div class="women"><a href="">WOMEN</a></div>
             </div>
             <div class="navbaritems" id="kids">
-                <div class="kids"><a>KIDS</a></div>
+                <div class="kids"><a href="">KIDS</a></div>
             </div>
             <div class="navbaritems" id="home">
-                <div class="home"><a>HOME & LIVING</a></div>
+                <div class="home"><a href="">HOME & LIVING</a></div>
             </div>
             <div class="navbaritems" id="beauty">
-                <div class="beauty"><a>BEAUTY</a></div>
+                <div class="beauty"><a href="">BEAUTY</a></div>
             </div>
             <div class="navbaritems" id="studio">
-                <div class="studio"><a>STUDIO</a></div>
+                <div class="studio"><a href="">STUDIO<sup>  NEW</sup></a></div>
             </div>
             <div class="navbaritems" id="searchbar">
                 <div class="searchbar">
@@ -37,20 +37,20 @@
                     <div id="searchbox"><input type="text" placeholder="Search for products,brands and more"></div>
                 </div>
             </div>
-            <div class="navendp">
+            <div class="navbendp">
             <div class="navbenditems" id="profile">
                 <div id="proico"><i class="fa-regular fa-user" style="color: #1c1e22;"></i></div>
-                <div id="protex">Profile</div>
+                <div id="protex"><a href="">Profile</a></div>
 
             </div>
             <div class="navbenditems" id="wishl">
                 <div id="wishico"><i class="fa-regular fa-heart" style="color: #2a2d32;"></i></div>
-                <div id="wishtex">Wishlist</div>
+                <div id="wishtex"><a href="">Wishlist</a></div>
 
             </div>
             <div class="navbenditems" id="bag">
-                <div id="bico"><i class="fa-light fa-bag-shopping" style="color: #16191d;"></i></div>
-                <div id="btex">Bag</div>
+                <div id="bico"><i class="fa-solid fa-bag-shopping" style="color: #2d3239;"></i></div>
+                <div id="btex"><a href="">Bag</a></div>
 
             </div>
         </div>
